apps/minecraft/minecraft-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: magesgate-com
  name: minecraft
spec: {}
