apps/minecraft/minecraft-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-server
  namespace: minecraft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-server
  template:
    metadata:
      labels:
        app: minecraft-server
    spec:
      containers:
      - name: minecraft
        image: itzg/minecraft-server:java21-graalvm
        ports:
        - containerPort: 25565
          hostPort: 25565
        volumeMounts:
        - name: minecraft-data
          mountPath: /data
      volumes:
      - name: minecraft-data
        persistentVolumeClaim:
          claimName: minecraft-pvc
      nodeSelector:
        kubernetes.io/arch: arm64
  strategy:
    type: Recreate
