apps/minecraft/minecraft-service-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-service-metrics
  namespace: minecraft
  annotations:
   prometheus.io/port: "9940"
   prometheus.io/scrape: "true"
spec:
  type: LoadBalancer
  ports:  
  - port: 9940
    name: metrics
    targetPort: 9940
    protocol: TCP
  selector:
    app: minecraft-server
