apps/minecraft/minecraft-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-service
  namespace: minecraft
  annotations:
   prometheus.io/port: "9940"
   prometheus.io/scrape: "true"
spec:
  type: LoadBalancer
  ports:  
  - port: 25565
    targetPort: 25565
    protocol: TCP
    name: minecraft-game
  - port: 9940
    name: metrics
    targetPort: 9940
    protocol: TCP
  - port: 8123
    name: web-map
    targetPort: 8123
    protocol: TCP    
  selector:
    app: minecraft-server
